analysis file with checks for coordinate problem

--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -10,7 +10,19 @@
     "%pylab inline\n",
     "import matplotlib.gridspec as gridspec\n",
     "from astropy.io import ascii\n",
+    "from glob import glob\n",
+    "from astropy.io import fits\n",
     "from astropy.table import Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random selection of red clump stars\n",
+    "# PMS"
    ]
   },
   {
@@ -72,17 +84,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"# Red giants\n",
-    "red_giant_coords = ascii.read('../HST_Guido/redgiants_coords.txt')\n",
-    "phot_df_redgiants = phot_df_newmthod.loc[red_giant_coords['ID']]\"\"\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,6 +102,145 @@
     "phot_df_flt_allstars_norecenter = read_in.copy().set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n",
     "phot_df_flt_allstars_norecenter = phot_df_flt_allstars_norecenter[phot_df_flt_allstars_norecenter.AREA>0]\n",
     "phot_df_flt_allstars_norecenter = phot_df_flt_allstars_norecenter.loc[all_stars.index, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new method\n",
+    "photometryfile = 'APP_phot_all_exps_fltnorecenter_wcswcs.csv'\n",
+    "read_in = pd.read_csv(photometryfile)\n",
+    "phot_df_flt_allstars_wcs = read_in.copy().set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n",
+    "phot_df_flt_allstars_wcs = phot_df_flt_allstars_wcs[phot_df_flt_allstars_wcs.AREA>0]\n",
+    "phot_df_flt_allstars_wcs = phot_df_flt_allstars_wcs.loc[all_stars.index, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(phot_df_flt_allstars_wcs[['XCENTER', 'YCENTER', 'MAG','COORDS']]).join(phot_df_flt_allstars_norecenter[['XCENTER', 'YCENTER', 'MAG','COORDS']], how='inner', rsuffix='_drizzlepack', lsuffix='_iraf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.colors import LogNorm\n",
+    "plt.hist2d(subdf.XCENTER,subdf.XCENTER- subdf.XCENTERr, bins=300, cmap=plt.cm.jet)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdf = df#.sample(10000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['DeltaX'] = df.XCENTER_iraf - df.XCENTER_drizzlepack\n",
+    "plt.hist2d(df.dropna().DeltaX.abs(), df.dropna()['MAG_drizzlepack']-df.dropna()['MAG_iraf'], bins=(np.linspace(0,10.100), np.linspace(-2,2,100)))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(subdf.XCENTER - subdf.XCENTERr).hist(bins=np.arange(0,10,0.1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdu = fits.open(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_df = df[(df.DeltaX>10)*(df.MAG_drizzlepack<19)*(df.MAG_drizzlepack>16)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16,16))\n",
+    "iter_=1\n",
+    "for index, row in compare_df.sample(9).iterrows():\n",
+    "    file = glob('../FLT_exposures/*/*/'+(row['COORDS_drizzlepack'][:-5])+'*pamcorr_exptime_crmasked.fits')[0]\n",
+    "    hdu = fits.open(file)[1]\n",
+    "    plt.subplot('33'+str(iter_))\n",
+    "    if iter_ not in [1,4,7]:\n",
+    "        plt.yticks([])\n",
+    "    else:\n",
+    "        #plt.ylabel('Shifted magnitude', size=16)\n",
+    "        plt.yticks(size=14)\n",
+    "    if iter_ not in [7,8,9]:\n",
+    "        plt.xticks([])\n",
+    "    else:\n",
+    "        plt.xticks(size=16)\n",
+    "    #plt.xlabel(r'$\\Delta \\, T$ [days]',size=16)\n",
+    "    #plt.ylim(-0.3,len(filterlist)-0.3)\n",
+    "    plt.tight_layout()\n",
+    "    X_center = row.XCENTER_drizzlepack\n",
+    "    Y_center = row.YCENTER_drizzlepack\n",
+    "    print(np.median(hdu.data))\n",
+    "    plt.imshow(np.nan_to_num(hdu.data), vmin=0, vmax=2000*np.median(hdu.data)/400, cmap=plt.cm.gist_heat)\n",
+    "    plt.xlim(X_center - 50, X_center+50)\n",
+    "    plt.ylim(Y_center - 50, Y_center+50)\n",
+    "    \n",
+    "    plt.scatter(X_center-1, Y_center-1, c='red', marker='X')\n",
+    "    plt.scatter(row.XCENTER_iraf-1, row.YCENTER_iraf-1, c='blue', marker='X')\n",
+    "    \n",
+    "    iter_+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Red giants\n",
+    "red_giant_coords = ascii.read('../HST_Guido/redgiants_coords.txt')\n",
+    "phot_df_redgiants = phot_df_flt_allstars_norecenter.loc[red_giant_coords['ID']]\n",
+    "phot_df_redgiants"
    ]
   },
   {
@@ -159,6 +299,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Potential candidates</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine true errors of Luuks measurements with the std of Giacomo\n",
+    "LuukMagMerr = phot_df_flt_allstars_norecenter[phot_df_flt_allstars_norecenter.index.get_level_values(1)=='F656N'].groupby(['ID'])[['MAG', 'MERR']].median()\n",
+    "LuukMagMerr.columns=['MedMagLuuk', 'MedMagErrLuuk']\n",
+    "GiacomoMagMerr = all_stars[['ha_1','eha_2']]\n",
+    "GiacomoMagMerr.columns=['MagGiacomo', 'STDMagGiacomo']\n",
+    "MERR_MAGSTD = LuukMagMerr.join(GiacomoMagMerr, how='inner')\n",
+    "# Now look for candidates with high STD but low error\n",
+    "MERR_MAGSTD['NSigma'] = MERR_MAGSTD.STDMagGiacomo / MERR_MAGSTD.MedMagErrLuuk\n",
+    "MERR_MAGSTD['Potential'] = (MERR_MAGSTD['NSigma']>5) * (MERR_MAGSTD['STDMagGiacomo']>0.2)\n",
+    "candidate_stars = MERR_MAGSTD[MERR_MAGSTD.Potential].index.values\n",
+    "print(len(candidate_stars))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -190,6 +356,23 @@
     "plt.xlim(15,28)\n",
     "plt.ylim(15,25)\n",
     "plt.plot([14,26],[14,26], color='red')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phot_df = phot_df_flt_allstars_norecenter\n",
+    "maxmag     = phot_df[(phot_df.index.get_level_values(3)=='deep')*(phot_df.index.get_level_values(1)!='F656N')].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].max()\n",
+    "minmag     = phot_df[(phot_df.index.get_level_values(3)=='deep')*(phot_df.index.get_level_values(1)!='F656N')].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].min()\n",
+    "a = (maxmag - minmag).abs()\n",
+    "(a<0.07).groupby('ID').sum().max()\n",
+    "#print(a)\n",
+    "# Ensure no strange things happen to the broad bands\n",
+    "\n",
+    "#a = ((a<0.07).groupby('ID').sum()>=4)\n"
    ]
   },
   {
@@ -233,24 +416,20 @@
     "    phot_df.loc[:,'Time'] = phot_df['Time'] - phot_df['Time'].min()\n",
     "    \n",
     "    # Select only stars with limited std in magnitudes for broad bands\n",
-    "    maxmag     = phot_df[phot_df.index.get_level_values(1)!='F656N'].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].max()\n",
-    "    minmag     = phot_df[phot_df.index.get_level_values(1)!='F656N'].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].min()\n",
-    "    a = maxmag - minmag\n",
+    "    maxmag     = phot_df[(phot_df.index.get_level_values(3)=='deep')*(phot_df.index.get_level_values(1)!='F656N')].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].max()\n",
+    "    minmag     = phot_df[(phot_df.index.get_level_values(3)=='deep')*(phot_df.index.get_level_values(1)!='F656N')].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].min()\n",
+    "    a = (maxmag - minmag).abs()\n",
     "    # Ensure no strange things happen to the broad bands\n",
-    "    a = ((a<0.1).groupby('ID').sum()>=4)\n",
+    "    \n",
+    "    a = ((a<0.15).groupby('ID').sum()>=4)\n",
     "    good_stars = a.index[a]\n",
     "    phot_df    = phot_df.loc[good_stars,:]\n",
     "\n",
     "    \n",
     "    # Select only stars with limited mag error\n",
-    "    phot_df   = phot_df[phot_df['MERR']<0.2]\n",
+    "    phot_df   = phot_df[phot_df['MERR']<0.1]\n",
     "    \n",
-    "    # Select some stars with enough remaining measurements\n",
-    "    #groupby    = phot_df.reset_index(level=1).groupby('ID')['Filter'].nunique()>=3\n",
-    "    #good_stars = groupby.index[groupby]\n",
-    "    #phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
-    "\n",
-    "    groupby    = (phot_df.groupby('ID')['MAG'].nunique()>60)\n",
+    "    groupby    = (phot_df[phot_df.index.get_level_values(3)=='deep'].groupby('ID')['MAG'].nunique()>60)\n",
     "    good_stars = groupby.index[groupby]\n",
     "    phot_df    = phot_df[[w in good_stars for w in phot_df.index.get_level_values(0)]]\n",
     "    \n",
@@ -271,13 +450,15 @@
    "outputs": [],
    "source": [
     "def generate_plots(phot_df, high_var=False):\n",
+    "    phot_df.loc[:,'Time'] = pd.to_numeric(phot_df.index.get_level_values(2))\n",
+    "    phot_df.loc[:,'Time'] = phot_df['Time'] - phot_df['Time'].min()\n",
     "    if high_var:\n",
     "        maxmag     = phot_df[phot_df.index.get_level_values(1)=='F656N'].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].max()\n",
     "        minmag     = phot_df[phot_df.index.get_level_values(1)=='F656N'].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].min()\n",
     "        medmag     = phot_df[phot_df.index.get_level_values(1)=='F656N'].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType'])['MAG'].median()\n",
-    "        a = medmag - minmag\n",
+    "        a = maxmag - minmag\n",
     "        Ha_err = phot_df[phot_df.index.get_level_values(1)=='F656N']['MERR'].groupby(['ID', 'Filter', 'Exp_Length', 'DrizzleType']).median()\n",
-    "        a = (a>5*Ha_err).groupby('ID').sum() * (a<1.2).groupby('ID').sum() * (a>0.4).groupby('ID').sum()\n",
+    "        a = (a>5*Ha_err).groupby('ID').sum() * (a<0.8).groupby('ID').sum() * (a>0.3).groupby('ID').sum()\n",
     "        good_stars = a.index[a]\n",
     "        phot_df    = phot_df.loc[good_stars,:]\n",
     "\n",
@@ -293,7 +474,7 @@
     "    print('Random sample from ', len(stellar_indices), ' stars remaining')\n",
     "    toplot = np.random.choice(stellar_indices, Nstars_plot, replace=False)\n",
     "    for nstar, starID in enumerate(toplot):\n",
-    "        for filter_iter, filter_ in enumerate(filterlist):\n",
+    "        for filter_iter, filter_ in enumerate(np.sort(filterlist)):\n",
     "            plt.subplot(gs1[nstar])\n",
     "            data = phot_df.loc[starID, filter_]\n",
     "            data = data[['MAG', 'MERR', 'Time']].sort_values(by='Time')\n",
@@ -334,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cleaned_df_allstars_norecenter = prepare_df(phot_df_flt_allstars_norecenter, False)\n",
+    "cleaned_df_allstars_norecenter = prepare_df(phot_df_flt_allstars_wcs, False)\n",
     "generate_plots(cleaned_df_allstars_norecenter, True)"
    ]
   },
@@ -346,8 +527,30 @@
    },
    "outputs": [],
    "source": [
+    "cleaned_df_allstars_norecenter = prepare_df(phot_df_flt_allstars_norecenter, False)\n",
+    "generate_plots(cleaned_df_allstars_norecenter, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df_pms_norecenter = prepare_df(phot_df_flt_pmsstars_norecenter, False)\n",
+    "generate_plots(cleaned_df_pms_norecenter, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "cleaned_df_pms_norecenter = prepare_df(phot_df_flt_pmsstars_norecenter_coordwcs, False)\n",
-    "generate_plots(cleaned_df_pms_norecenter, True)"
+    "generate_plots(cleaned_df_pms_norecenter, False)"
    ]
   },
   {
