Added nearest neighbour finder

--- a/FinalApPhot/Analysis.ipynb
+++ b/FinalApPhot/Analysis.ipynb
@@ -43,6 +43,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def nearest_neighbours(catalogue, Nstars = 250):\n",
+    "    deltaRA  = catalogue.RA.values - catalogue.RA.values[:,np.newaxis]\n",
+    "    deltaDEC = catalogue.Dec.values - catalogue.Dec.values[:,np.newaxis]\n",
+    "    deltaAngle = deltaRA**2 + deltaDEC**2\n",
+    "\n",
+    "    nearest = np.argsort(deltaAngle, axis=1)+1 # To correct for ID <-> argument\n",
+    "    nearest = pd.DataFrame(nearest[:,1:Nstars+1], index=catalogue.index)\n",
+    "    return nearest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neighbours_all = nearest_neighbours(all_stars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pms_stars = Table.read('../HST_Guido/30dorallpmsstars.txt', format='ascii').to_pandas()\n",
     "pms_stars = pms_stars.set_index('NR')"
    ]
@@ -101,15 +126,6 @@
     "phot_df_flt_allstars_norecenter = read_in.copy().set_index(['ID', 'Filter', 'T_Start', 'Exp_Length', 'DrizzleType'])\n",
     "phot_df_flt_allstars_norecenter = phot_df_flt_allstars_norecenter[phot_df_flt_allstars_norecenter.AREA>0]\n",
     "phot_df_flt_allstars_norecenter = phot_df_flt_allstars_norecenter.loc[all_stars.index, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phot_df_flt_allstars_norecenter['WhichWFC'] = phot_df_flt_allstars_norecenter.COORDS.apply(lambda x: (1 if 'wfc1' in x else 2))"
    ]
   },
   {
@@ -188,13 +204,13 @@
    "outputs": [],
    "source": [
     "def local_MZP_correction(phot_df):\n",
-    "    phot_df['WhichWFC'] = phot_df.COORDS.apply(lambda x: (1 if 'wfc1' in x else 2))\n",
-    "    phot_df['Xbin'] = pd.cut(phot_df['XCENTER'], bins=5)\n",
-    "    phot_df['Ybin'] = pd.cut(phot_df['YCENTER'], bins=5)\n",
+    "    #phot_df['WhichWFC'] = phot_df.COORDS.apply(lambda x: (1 if 'wfc1' in x else 2))\n",
+    "    #phot_df['Xbin'] = pd.cut(phot_df['XCENTER'], bins=10)\n",
+    "    #phot_df['Ybin'] = pd.cut(phot_df['YCENTER'], bins=10)\n",
     "    \n",
     "    \n",
-    "    analysis_df = phot_df[phot_df.MERR<0.2]\n",
-    "    analysis_df = analysis_df[(analysis_df.MAG>14)*(analysis_df.MAG<26)]\n",
+    "    analysis_df = phot_df[phot_df.MERR<0.15]\n",
+    "    analysis_df = analysis_df[(analysis_df.MAG>14)*(analysis_df.MAG<25)]\n",
     "    analysis_df = analysis_df[analysis_df.index.get_level_values(3)=='deep']\n",
     "    \n",
     "    \n",
@@ -202,17 +218,17 @@
     "    #    this_star_df = phot_df.loc[star]\n",
     "    #    xc, yc = this_star_df['XCENTER'].median(), this_star_df['YCENTER'].median()\n",
     "    \n",
-    "    bin_t_filter_median = analysis_df.groupby(['WhichWFC','Exp_Length','Xbin','Ybin', 'Filter', 'T_Start'])['MAG'].median()\n",
-    "    phot_correction = pd.DataFrame((bin_t_filter_median- bin_t_filter_median.groupby(['WhichWFC','Exp_Length','Xbin','Ybin', 'Filter']).median()).fillna(0))\n",
+    "    TimeSepMedian = pd.DataFrame(analysis_df.groupby(['WhichWFC','Exp_Length','Xbin','Ybin', 'Filter', 'T_Start'])['MAG'].median()).dropna()\n",
+    "    TimeMedian    = pd.DataFrame(analysis_df.groupby(['WhichWFC','Exp_Length','Xbin','Ybin', 'Filter'])['MAG'].median()).dropna()\n",
+    "    phot_correction = TimeSepMedian - TimeMedian\n",
     "    phot_correction.columns = ['MagCorr']\n",
     "\n",
-    "    #return phot_df.reset_index().set_index(['WhichWFC','Exp_Length','Xbin','Ybin', 'Filter', 'T_Start'])\n",
     "    \n",
-    "    phot_df_joined = phot_df.reset_index().set_index(['WhichWFC','Exp_Length','Xbin','Ybin', 'Filter', 'T_Start']).merge(phot_correction, how='left',left_index=True, right_index=True)\n",
+    "    phot_df_joined = phot_df.reset_index().set_index(['ID','WhichWFC','Exp_Length','Xbin','Ybin', 'Filter', 'T_Start']).merge(phot_correction, how='left',left_index=True, right_index=True)\n",
     "\n",
-    "    phot_df_joined['MAG'] = phot_df_joined['MAG'] - phot_df_joined['MagCorr']\n",
-    "    phot_df_joined = phot_df_joined.reset_index().set_index(phot_df.index.names)\n",
-    "    return phot_df_joined\n",
+    "    phot_df_joined['MAG'] = phot_df_joined['MAG'] - phot_df_joined['MagCorr'].fillna(0)\n",
+    "    phot_df_joined = phot_df_joined.reset_index().set_index(phot_df.index.names).loc[phot_df.index]\n",
+    "    return phot_df_joined#.drop('MagCorr', axis=1)\n",
     "\n",
     "phot_df_flt_allstars_norecenter_localMZP = local_MZP_correction(phot_df_flt_allstars_norecenter)"
    ]
@@ -223,7 +239,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phot_df_flt_allstars_norecenter_localMZP['MAG'] - phot_df_flt_allstars_norecenter['MAG']"
+    "phot_df = phot_df_flt_allstars_norecenter[phot_df_flt_allstars_norecenter.index.get_level_values(3)=='deep']\n",
+    "phot_df_corrected = phot_df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "ts=time.time()\n",
+    "for index, row in phot_df[:50000].iterrows():\n",
+    "    xc, yc = row.XCENTER, row.YCENTER\n",
+    "    distances = (phot_df.XCENTER-xc)**2 + (phot_df.YCENTER-yc)**2\n",
+    "    neightbours = distances.groupby(['ID']).median().sort_values().iloc[:1000].index.values\n",
+    "    phot_neightbours = phot_df.loc[neightbours]\n",
+    "    \n",
+    "    phot_neightbours = phot_neightbours[phot_neightbours.MERR<0.15]\n",
+    "    phot_neightbours = phot_neightbours[phot_neightbours.MAG>15]\n",
+    "    phot_neightbours = phot_neightbours[phot_neightbours.MAG<28]\n",
+    "    phot_neightbours = phot_neightbours.loc[phot_neightbours.index.get_level_values(0).unique()[:100]]\n",
+    "    \n",
+    "    TimeSepMedian = phot_neightbours.groupby(['Filter', 'T_Start'])['MAG'].median()\n",
+    "    TimeMedian    = phot_neightbours.groupby(['Filter'])['MAG'].median()\n",
+    "    Correction    = TimeSepMedian - TimeMedian\n",
+    "    break\n",
+    "print(time.time()-ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phot_df_flt_allstars_norecenter_localMZP.MagCorr.hist(bins=np.arange(-1,1,0.01), normed=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TimeSepMedian = pd.DataFrame(analysis_df.groupby(['WhichWFC','Exp_Length','ID', 'Filter', 'T_Start'])['MAG'].median()).dropna()\n",
+    "TimeMedian    = pd.DataFrame(analysis_df.groupby(['WhichWFC','Exp_Length','ID', 'Filter'])['MAG'].median()).dropna()"
    ]
   },
   {
@@ -359,7 +430,7 @@
     "    a = (maxmag - minmag).abs()\n",
     "    # Ensure no strange things happen to the broad bands\n",
     "    \n",
-    "    a = ((a<0.1).groupby('ID').sum()>=4)\n",
+    "    a = ((a<0.2).groupby('ID').sum()>=4)\n",
     "    good_stars = a.index[a]\n",
     "    phot_df    = phot_df.loc[good_stars,:]\n",
     "\n",
@@ -445,15 +516,6 @@
     "    plt.suptitle(r'Stellar H$\\alpha$ brightness variability in 30-dor', y=1.03,fontsize=25)\n",
     "    #plt.savefig('output.png', dpi=200)\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phot_df_flt_allstars_norecenter_localMZP['MAG']"
    ]
   },
   {
