Commit before rebuilding to single image instead of two WFCs

--- a/FLT_exposures/REGRID/SExtractor/SExtractor Analysis.ipynb
+++ b/FLT_exposures/REGRID/SExtractor/SExtractor Analysis.ipynb
@@ -30,8 +30,8 @@
    "source": [
     "class read_sexcats():\n",
     "    def __init__(self):\n",
-    "        phot_df = self.join(1)\n",
-    "        self.phot_df = self.join(2, phot_df)\n",
+    "        #phot_df = self.join(1)\n",
+    "        self.phot_df = self.join()#2, phot_df)\n",
     "        #phot_df = self.return_func(phot_df)\n",
     "        \n",
     "    def join(self, wfc, phot_df=None):\n",
@@ -248,7 +248,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "phot_df"
+   ]
   },
   {
    "cell_type": "code",
@@ -262,6 +264,13 @@
     "    MedianMagOverall = best_phot_df.loc[neightbours].groupby(['Filter'])['MAG_APER2'].median()\n",
     "    MedianMagTime - MedianMagOverall"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
