Added Analysis class and changed read in to read the photometry done on the large image

--- a/FLT_exposures/REGRID/SExtractor/SExtractor Analysis.ipynb
+++ b/FLT_exposures/REGRID/SExtractor/SExtractor Analysis.ipynb
@@ -34,23 +34,25 @@
     "        self.phot_df = self.join()#2, phot_df)\n",
     "        #phot_df = self.return_func(phot_df)\n",
     "        \n",
-    "    def join(self, wfc, phot_df=None):\n",
-    "        items = np.sort([w.split('_flt')[0] for w in glob('./wfc'+str(wfc)+'/*rate*regrid.fits')])\n",
+    "    def join(self, phot_df=None):\n",
+    "        items = np.sort(glob('../Add_Regrid/*add_regrid.fits')) \n",
+    "        #np.sort([w.split('_flt')[0] for w in glob('./wfc'+str(wfc)+'/*rate*regrid.fits')])\n",
     "        for iterator in range(len(items)):\n",
     "            item = items[iterator]\n",
-    "            hdul = fits.open(glob(item+'*regrid*')[0])\n",
-    "            expstart = hdul[0].header['EXPSTART']\n",
-    "            EXPTIME  = hdul[0].header['EXPTIME']\n",
-    "            filter_  = hdul[0].header['FILTER']\n",
-    "            sexcat = Table.read(glob(item+'*phot*')[0], format=\"fits\", hdu='LDAC_OBJECTS')#.to_pandas()\n",
+    "            hdul = fits.open(item)\n",
+    "            expstart = hdul[1].header['EXPSTART']\n",
+    "            EXPTIME  = hdul[1].header['EXPTIME']\n",
+    "            filter_  = hdul[1].header['FILTER']\n",
+    "            sexcat_file = item.replace('add_regrid', 'phot')\n",
+    "            sexcat = Table.read(sexcat_file, format=\"fits\", hdu='LDAC_OBJECTS')#.to_pandas()\n",
     "            sexcat = self.unpack_apers(sexcat)\n",
     "            sexcat.remove_columns(['MAG_APER', 'MAGERR_APER', 'FLUX_APER', 'FLUXERR_APER'])    \n",
     "            sexcat = sexcat.to_pandas()\n",
     "\n",
     "            sexcat = sexcat.rename(columns={'NUMBER':'SExID'})\n",
     "            \n",
-    "            if wfc==2: \n",
-    "                sexcat.SExID += phot_df[phot_df.WhichWFC==1].SExID.max()\n",
+    "            #if wfc==2: \n",
+    "            #    sexcat.SExID += phot_df[phot_df.WhichWFC==1].SExID.max()\n",
     "            #sexcat = sexcat.rename(columns={'VECTOR_ASSOC':'ID'})\n",
     "            #sexcat['ID'] = sexcat['ID'].astype(int)\n",
     "\n",
@@ -58,7 +60,7 @@
     "            sexcat['Exptime'] = EXPTIME\n",
     "            sexcat['Exp_Length'] = ('deep' if EXPTIME > 31 else 'short')\n",
     "            sexcat['Filter']     = filter_\n",
-    "            sexcat['WhichWFC']   = wfc\n",
+    "            #sexcat['WhichWFC']   = wfc\n",
     "            sexcat = self.clean(sexcat)\n",
     "            #sexcat = sexcat.set_index('ID')\n",
     "            try:\n",
@@ -108,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class clean_photometry():\n",
+    "class HCV_error_analysis():\n",
     "    def __init__(self, phot_df):\n",
     "        self.phot_df = phot_df\n",
     "        return\n",
@@ -170,15 +172,6 @@
     "    Dists     = pd.DataFrame(Dists, index = SExCoordinates.index, columns=all_stars.index)\n",
     "    Assoc_df  = pd.DataFrame({'RefCatID':Dists.idxmin(axis=1)})\n",
     "    return Assoc_df.dropna()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def nearest_neighbours(phot_df, Nstars = 250):\n",
     "    catalogue = phot_df.groupby('SExID')['ALPHA_J2000', 'DELTA_J2000'].median()\n",
     "    Nentries = len(catalogue)\n",
@@ -195,6 +188,115 @@
     "    nearest = catalogue.index.values[np.argsort(deltaAngle, axis=1)] # To correct for ID <-> argument\n",
     "    nearest = pd.DataFrame(nearest[:,1:Nstars+1], index=catalogue.index)\n",
     "    return nearest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Analysis():\n",
+    "    def __init__(self, phot_df):\n",
+    "        self.ApplySelection(phot_df)\n",
+    "        return\n",
+    "\n",
+    "    def ApplySelection(self, phot_df):\n",
+    "        self.phot_df = phot_df[phot_df.SynErrorDevSig<=3]\n",
+    "        self.phot_df = self.phot_df[self.phot_df.index.get_level_values(3)=='deep']\n",
+    "    \n",
+    "    def GetMADvalues(self):\n",
+    "        phot_df          = self.phot_df\n",
+    "        MedianMagTime    = phot_df.groupby(['SExID', 'Filter', 'T_Start'])['MAG_APER2'].median()\n",
+    "        MedianMagOverall = phot_df.groupby(['SExID', 'Filter'])['MAG_APER2'].median()\n",
+    "        MagOffset        = (MedianMagTime - MedianMagOverall).abs()\n",
+    "        self.MAD         = MagOffset.groupby(['SExID', 'Filter']).median()\n",
+    "        return self.MAD\n",
+    "    \n",
+    "    def DrawTrumpets(self,magcol = 'MAG_APER3', IDcol = 'SExID'):\n",
+    "        phot_df = self.phot_df\n",
+    "        merrcol = magcol.replace('MAG', 'MERR')\n",
+    "        # Trumpet plot\n",
+    "        from matplotlib.colors import LogNorm\n",
+    "        magnitudes = phot_df[magcol]\n",
+    "        filters = magnitudes.index.get_level_values(1).unique()\n",
+    "        plt.figure(figsize=(20,10))\n",
+    "        num=0\n",
+    "        for filter_ in filters:\n",
+    "            epochs  = magnitudes.loc[:,filter_,:].index.get_level_values(1).unique()\n",
+    "            mags_t0 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[0], :])\n",
+    "            num+=1\n",
+    "            plt.subplot('23'+str(num))\n",
+    "            xs, ys = np.array([]), np.array([])\n",
+    "            for i in range(len(epochs)-1):\n",
+    "                mags_t1 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[i+1], :])\n",
+    "                join_mags = mags_t0.join(mags_t1, lsuffix = '_t0', rsuffix='_t1', how='inner')\n",
+    "                join_mags['DeltaMag'] = join_mags[magcol+'_t1'] - join_mags[magcol+'_t0']\n",
+    "                median_mags = magnitudes.loc[:, filter_, :].groupby([IDcol, 'Exp_Length']).median()\n",
+    "                join_mags = join_mags.join(median_mags)\n",
+    "                x, y = join_mags[magcol].values, join_mags['DeltaMag'].values\n",
+    "                x, y = x[np.isfinite(x)*np.isfinite(y)], y[np.isfinite(x)*np.isfinite(y)]\n",
+    "                xs = np.hstack((xs,x))\n",
+    "                ys = np.hstack((ys,y))\n",
+    "            plt.hist2d(xs, ys, bins=(np.linspace(15,28,80), np.linspace(-3,3,150)), cmap='jet', cmin=15)\n",
+    "            plt.title(filter_, pad=-15)\n",
+    "            plt.ylabel('Delta Mag')\n",
+    "            plt.xlabel('Median magnitude')\n",
+    "            plt.ylim(-1,1)\n",
+    "            plt.xlim(14,27)\n",
+    "            if num in [1,4,7]:\n",
+    "                plt.ylabel('Delta Mag')\n",
+    "            else:\n",
+    "                plt.yticks([])\n",
+    "            if num in [4,5]:\n",
+    "                plt.xlabel('Median magnitude')\n",
+    "            else:\n",
+    "                plt.xticks([])\n",
+    "            plt.ylim(-1.5,1.5)\n",
+    "        plt.tight_layout()\n",
+    "        #plt.savefig('trumpet_diagrams.png', dpi=500)\n",
+    "        plt.show()\n",
+    "\n",
+    "    def MAG_pdf(self, magcol = 'MAG_APER2',fluxcol='FLUX_APER2', IDcol = 'SExID'):\n",
+    "        phot_df = self.phot_df\n",
+    "        fig, ax = plt.subplots(figsize=(10,6))\n",
+    "        for name, group in phot_df[phot_df[fluxcol]>0].groupby('Filter')[magcol]:\n",
+    "            group.hist(bins=np.arange(15,30,0.1), histtype='step', ax=ax, normed=True, label=name, linewidth=2)\n",
+    "        ax.legend()\n",
+    "        ax.set_xlabel('Magnitude')\n",
+    "        ax.set_ylabel('Normalized frequency')\n",
+    "        ax.set_xlim(15,30)\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "        fig, ax = plt.subplots(figsize=(10,6))\n",
+    "        for name, group in phot_df[phot_df[fluxcol]>0].groupby('Filter')[magcol]:\n",
+    "            group.hist(bins=np.arange(15,30,0.1),cumulative=True, histtype='step', ax=ax, normed=True, label=name, linewidth=2)\n",
+    "        ax.legend()\n",
+    "        ax.set_xlabel('Magnitude')\n",
+    "        ax.set_ylabel('Normalized frequency')\n",
+    "        ax.set_xlim(15,30)\n",
+    "        plt.show()\n",
+    "    \n",
+    "    def GetNumberOfMeasurements(self):\n",
+    "        counts = self.phot_df['MAG_APER2'].groupby(['SExID', 'Filter']).count()\n",
+    "        return counts\n",
+    "    \n",
+    "    def GetTimeSeries(self, SExID = None, Filter=None):\n",
+    "        if not SExID:\n",
+    "            MinMeasurements = 10\n",
+    "            WhichEntries    = self.GetNumberOfMeasurements()>MinMeasurements\n",
+    "            WhichEntries    = WhichEntries[WhichEntries]\n",
+    "            RandomRow       = np.random.randint(0,len(WhichEntries))\n",
+    "            SExID           = WhichEntries.index.get_level_values(0)[RandomRow]\n",
+    "            Filter          = WhichEntries.index.get_level_values(1)[RandomRow]\n",
+    "        JulianDates = self.phot_df.loc[SExID, Filter].reset_index().T_Start\n",
+    "        Magnitudes  = self.phot_df.loc[SExID, Filter].MAG_APER2\n",
+    "        Synth_err   = self.phot_df.loc[SExID, Filter].SynErrorDevSig\n",
+    "        MAG_err     = self.phot_df.loc[SExID, Filter].MAGERR_APER2\n",
+    "        \n",
+    "        plt.errorbar(JulianDates, Magnitudes, yerr=MAG_err, linestyle='none', fmt='o', ecolor='black', capthick=2)\n",
+    "        #plt.scatter(JulianDates, Magnitudes, marker='o', c='black')"
    ]
   },
   {
@@ -222,7 +324,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phot_df = read_sexcats().return_func()"
+    "phot_df = read_sexcats().return_func()\n",
+    "phot_df = HCV_error_analysis(phot_df).clean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = phot_df['MAG_APER2'].groupby(['SExID', 'Filter']).count()"
    ]
   },
   {
@@ -231,7 +350,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phot_df = clean_photometry(phot_df).clean()"
+    "Analyzer = Analysis(phot_df)\n",
+    "Analyzer.GetTimeSeries()"
    ]
   },
   {
@@ -240,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nearest = nearest_neighbours(phot_df)"
+    "Analyzer.DrawTrumpets()"
    ]
   },
   {
@@ -248,8 +368,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "phot_df"
+    "best_phot_df = phot_df[phot_df.SynErrorDevSig<2]"
    ]
   },
   {
@@ -270,93 +397,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def DrawTrumpets(phot_df, magcol = 'MAG_APER3', IDcol = 'SExID'):\n",
-    "    merrcol = magcol.replace('MAG', 'MERR')\n",
-    "    # Trumpet plot\n",
-    "    from matplotlib.colors import LogNorm\n",
-    "    magnitudes = phot_df[magcol]\n",
-    "    magnitudes = magnitudes[magnitudes.index.get_level_values(3)=='deep']\n",
-    "    filters = magnitudes.index.get_level_values(1).unique()\n",
-    "    plt.figure(figsize=(20,10))\n",
-    "    num=0\n",
-    "    for filter_ in filters:\n",
-    "        epochs  = magnitudes.loc[:,filter_,:].index.get_level_values(1).unique()\n",
-    "        mags_t0 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[0], :])\n",
-    "        num+=1\n",
-    "        plt.subplot('23'+str(num))\n",
-    "        xs, ys = np.array([]), np.array([])\n",
-    "        for i in range(len(epochs)-1):\n",
-    "            mags_t1 = pd.DataFrame(magnitudes.loc[:, filter_, epochs[i+1], :])\n",
-    "            join_mags = mags_t0.join(mags_t1, lsuffix = '_t0', rsuffix='_t1', how='inner')\n",
-    "            join_mags['DeltaMag'] = join_mags[magcol+'_t1'] - join_mags[magcol+'_t0']\n",
-    "            median_mags = magnitudes.loc[:, filter_, :].groupby([IDcol, 'Exp_Length']).median()\n",
-    "            join_mags = join_mags.join(median_mags)\n",
-    "            x, y = join_mags[magcol].values, join_mags['DeltaMag'].values\n",
-    "            x, y = x[np.isfinite(x)*np.isfinite(y)], y[np.isfinite(x)*np.isfinite(y)]\n",
-    "            xs = np.hstack((xs,x))\n",
-    "            ys = np.hstack((ys,y))\n",
-    "        plt.hist2d(xs, ys, bins=(np.linspace(15,28,80), np.linspace(-3,3,150)), cmap='jet', cmin=15)\n",
-    "        plt.title(filter_, pad=-15)\n",
-    "        plt.ylabel('Delta Mag')\n",
-    "        plt.xlabel('Median magnitude')\n",
-    "        plt.ylim(-1,1)\n",
-    "        plt.xlim(14,27)\n",
-    "        if num in [1,4,7]:\n",
-    "            plt.ylabel('Delta Mag')\n",
-    "        else:\n",
-    "            plt.yticks([])\n",
-    "        if num in [4,5]:\n",
-    "            plt.xlabel('Median magnitude')\n",
-    "        else:\n",
-    "            plt.xticks([])\n",
-    "        plt.ylim(-1.5,1.5)\n",
-    "    plt.tight_layout()\n",
-    "    #plt.savefig('trumpet_diagrams.png', dpi=500)\n",
-    "    plt.show()\n",
-    "DrawTrumpets(phot_df)"
+    "MedianMagTime    = phot_df.groupby(['SExID', 'Filter', 'T_Start'])['MAG_APER2'].median()\n",
+    "MedianMagOverall = phot_df.groupby(['SExID', 'Filter'])['MAG_APER2'].median()\n",
+    "MagOffset        = (MedianMagTime - MedianMagOverall).abs()\n",
+    "MAD              = MagOffset.groupby(['SExID', 'Filter']).median()"
    ]
   },
   {
@@ -365,27 +410,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def MAG_pdf(phot_df, magcol = 'MAG_APER3',fluxcol='FLUX_APER3', IDcol = 'SExID'):\n",
-    "    fig, ax = plt.subplots(figsize=(10,6))\n",
-    "    for name, group in phot_df[phot_df[fluxcol]>0].groupby('Filter')[magcol]:\n",
-    "        group.hist(bins=np.arange(15,30,0.1), histtype='step', ax=ax, normed=True, label=name, linewidth=2)\n",
-    "    ax.legend()\n",
-    "    ax.set_xlabel('Magnitude')\n",
-    "    ax.set_ylabel('Normalized frequency')\n",
-    "    ax.set_xlim(15,30)\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(10,6))\n",
-    "    for name, group in phot_df[phot_df[fluxcol]>0].groupby('Filter')[magcol]:\n",
-    "        group.hist(bins=np.arange(15,30,0.1),cumulative=True, histtype='step', ax=ax, normed=True, label=name, linewidth=2)\n",
-    "    ax.legend()\n",
-    "    ax.set_xlabel('Magnitude')\n",
-    "    ax.set_ylabel('Normalized frequency')\n",
-    "    ax.set_xlim(15,30)\n",
-    "    plt.show()\n",
-    "MAG_pdf(phot_df)"
+    "MAD"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MedianMagTime - MedianMagOverall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
